# neurogate

./: .gitignore  0001-add-.html-handling-middleware.patch  Cargo.toml  README.md  config.toml  default.nix  flake.nix
openspec/: project.md
openspec/changes/add-multi-domain-support/: proposal.md  tasks.md
openspec/changes/add-multi-domain-support/specs/domain-routing/: spec.md
src/: main.rs
