[package]
name = "neurogate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
log = "0.4.22"
pretty_env_logger = "0.5.0"
axum = "0.7.5"
axum-server = "0.7.1"
hyper = { version = "1.4.0", features = ["client", "http2"] }
hyper-util = { version = "0.1.6", features = ["client-legacy"] }
rustls-acme = { version = "0.11.1", features = ["axum"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["auth", "fs"] }
futures-lite = "2.3.0"
pin-project = "1.1.5"
serde = "1.0.213"
toml = "0.8.19"
